<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tastydew.com.justthetip.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/label_BillAmount"
        android:layout_width="233dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/billAmtLabel"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_BillAmt"
        android:layout_width="109dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="$0.00"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_BillAmount" />

    <View
        android:id="@+id/view"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_BillAmt" />

    <TextView
        android:id="@+id/label_BillSplit"
        android:layout_width="228dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amiko"
        android:gravity="center_vertical|center_horizontal|right"
        android:text="@string/splitAmtLbl"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <SeekBar
        android:id="@+id/seekBar_SplitAmount"
        android:layout_width="268dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="50"
        android:min="1"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_BillSplit" />

    <TextView
        android:id="@+id/text_personIndicator"
        android:layout_width="111dp"
        android:layout_height="27dp"
        android:layout_marginEnd="16dp"
        android:text="@string/splitPeopleLabel"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_BillSplit"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_SplitCounter"
        android:layout_width="33dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="1"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_BillSplit"
        app:layout_constraintEnd_toStartOf="@+id/text_personIndicator"
        app:layout_constraintStart_toEndOf="@+id/label_BillSplit" />

    <View
        android:id="@+id/view2"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_SplitAmount" />

    <TextView
        android:id="@+id/label_TipAmount"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/TipAmountLbl"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <SeekBar
        android:id="@+id/seekBar_TipAmount"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_TipAmount" />

    <View
        android:id="@+id/view3"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_TipAmount" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lblTotalBill"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/text_TotalBillAmount"
        android:layout_width="270dp"
        android:layout_height="87dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textview_border"
        android:gravity="center_horizontal|center_vertical"
        android:hint="$0.00"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txt_TipAmount"
        android:layout_width="127dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textview_border"
        android:fontFamily="@font/amiko"
        android:gravity="center_vertical|center_horizontal"
        android:text="0%"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_TipAmount" />

</android.support.constraint.ConstraintLayout>
